financial/react-frontend/frontend-react-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-react
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend-react
          image: eu-frankfurt-1.ocir.io/<tenancy-namespace>/financial/react-frontend:0.1.1757037497
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
      restartPolicy: Always
