financial/react-frontend/frontend-react-deployment_template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-react
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend-react
          image: IMAGE_PLACEHOLDER
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
      restartPolicy: Always
