financial/react-frontend/grafana-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-manual
  namespace: financial
spec:
  clusterIP: None
  ports:
    - port: 80
      targetPort: 3000
