financial/react-frontend/grafana-manual-endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: grafana-manual
  namespace: financial
subsets:
  - addresses:
      - ip: 10.244.0.61
    ports:
      - port: 3000
