financial/react-frontend/react-static-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-static-ingress
  namespace: financial
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: oracledev.ai
      http:
        paths:
          - path: /financial/static/
            pathType: Prefix
            backend:
              service:
                name: react-frontend
                port:
                  number: 80
